fix overflow intersection

--- a/src/features/layout/layout.module.sass
+++ b/src/features/layout/layout.module.sass
@@ -11,6 +11,9 @@
     &__common
         margin: 0
         padding: 0
+        height: calc( 100vh - 98px)
+        @media screen and ('max-width: 1024px')
+            height: calc( 100vh - 64px)
     &__show
         background: #0007
         z-index: 9
