--- a/src/pages/claims/claims.module.sass
+++ b/src/pages/claims/claims.module.sass
@@ -1,8 +1,11 @@
 .claims
     &__claims
         width: 100%
+        height: 100%
         padding: 0 56px 0 64px
         overflow-y: auto
+        position: relative
+
         @media screen and ( max-width: 1024px )
             margin-top: 64px
             padding: 0 15px
@@ -53,3 +56,6 @@
     &__link
         & > a
             color: #148BFF
+
+    &__table
+        // overflow: auto
